src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-image: url("/background.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

@font-face {
  font-family: superHeroFont;
  src: url("/Bangers.ttf");
}

.heroContainer {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-left: 15%;
  margin-right: 15%;
}

.cardContainer {
  text-align: center;
  font-size: x-large;
  border: solid black 1px;
  border-radius: 5px;
  background-color: orange;
  min-width: 150px;
  max-width: 150px;
  min-height: 295px;
  overflow: hidden;
}

.name {
  display: grid;
  align-items: center;
  justify-content: center;
  max-height: 75px;
  min-height: 75px;
  text-shadow: black 1px 1px 0px;
  font-size: 1.2em;
  letter-spacing: 1px;
}

.heroFont {
  font-family: superHeroFont;
  font-size: large;
}

.big-font {
  font-size: xx-large;
}

.heroCard {
  font-family: superHeroFont;
  -webkit-animation: fadein 3s;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
  transition: transform 0.2s;
  padding: 5px;
  background: white;
  border: solid black 1px;
  border-radius: 5px;
  margin: 25px;
  max-width: 162px;
  max-height: 309px;
}

.heroCard:hover {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
  transform: scale(1.5);
  z-index: 2;
}
.arenaContainer .heroCard:hover {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
  transform: none;
  z-index: 2;
}

.statContainer {
  display: grid;
  grid-template-columns: 70% 30%;
  font-size: small;
  background-color: #ffffff55;
  margin: 1px;
}
.statsContainer {
  padding-top: 20px;
  padding-bottom: 0px;
}

@keyframes fadein {
  from {
    animation-delay: 1s;
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.heroImg {
  align-self: stretch;
  height: 220px;
  width: 150px;
  vertical-align: bottom;
}

.name {
  font-family: superHeroFont;
}
.header {
  display: grid;
  justify-content: center;
}

.scrollTrigger {
  width: 10px;
  min-height: 10px;
  margin-bottom: 30px;
}

.space {
  min-height: 20px;
}

.MuiAppBar-colorPrimary {
  background-color: transparent !important;
  color: black !important;
}

.MuiPaper-elevation4 {
  box-shadow: none !important;
}

.makeStyles-root-1 {
  height: 20px !important;
}

.MuiPaper-root {
  background-color: transparent !important;
  border: none !important;
  box-shadow: none !important;
}

.MuiTypography-body1,
.MuiTypography-h6 {
  font-family: superHeroFont !important;
  text-align: center !important;
  font-size: x-large !important;
  letter-spacing: 1px !important;
}

.MuiTypography-h6 {
  margin-left: 20px !important;
}
a {
  text-decoration: none;
  color: black;
}
a:hover {
  color: white;
  text-decoration: none;
  cursor: pointer;
}

.arenaContainer {
  padding-left: 250px;
  padding-right: 250px;
}

#heroQueue {
  padding: 5px;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  overflow-x: scroll;
  min-height: 400px;
  max-height: 400px;
  align-items: center;
  border-radius: 10px;
}

.cardBox {
  background-color: #ffffff55;
}

.teamsContainer {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.dropZone {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  min-height: 500px;
  min-width: 300px;
  max-width: 300px;
  margin: 20px;
  align-items: center;
}

.overlay {
  opacity: 0;
  filter: alpha(opacity = 0);
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: block;
  z-index: -20;
  background: transparent;
  visibility: hidden;
}

.come-forward {
  z-index: 10;
}
.relative {
  position: relative;
  z-index: 1;
}

.makeStyles-root-11 {
  max-width: 700px;
  flex-grow: 1;
  background-color: #cac6c1b5 !important;
  border-radius: 10px;
  min-height: 410px;
}

.MuiTab-wrapper {
  font-family: superHeroFont;
  color: white;
  font-size: large;
}

.MuiTabs-root {
  background-color: red;
}

.heroDetailContainer {
  margin-right: auto;
  margin-left: auto;
  display: flex;
  justify-content: center;
}

.detailPageCard {
  max-height: 359px !important;
}

.detailCategory {
  color: #3477b0;
}

.superHeroDetailedContainer {
  display: grid !important;
  grid-template-columns: 30% 70% !important;
  justify-items: center;
  align-items: center;
}
.powerbar {
  width: 300px;
  height: 20px;
  position: relative;
  background: #555;
  -moz-border-radius: 25px;
  -webkit-border-radius: 25px;
  border-radius: 25px;
  padding: 0px;
  box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.3);
}

.powerbar > span {
  display: block;
  height: 100%;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  background-color: rgb(43, 194, 83);
  background-image: linear-gradient(
    center bottom,
    rgb(43, 194, 83) 37%,
    rgb(84, 240, 84) 69%
  );
  box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.3),
    inset 0 -2px 6px rgba(0, 0, 0, 0.4);
  position: relative;
  overflow: hidden;
}

.powerbar > span:after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-image: linear-gradient(
    -45deg,
    rgba(255, 255, 255, 0.2) 25%,
    transparent 25%,
    transparent 50%,
    rgba(255, 255, 255, 0.2) 50%,
    rgba(255, 255, 255, 0.2) 75%,
    transparent 75%,
    transparent
  );
  z-index: 1;
  background-size: 50px 50px;
  animation: move 2s linear infinite;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  overflow: hidden;
}
label {
  font-size: large;
}
.MuiButtonBase-root {
  justify-content: center !important;
}
.boom {
  margin-top: 220px;
  width: 150px;
}
#greenCorner {
  background-color: #00800080;
  border-radius: 10px;
}

.boom:hover {
  transform: scale(1.4);
}

.the-end:hover {
  transform: scale(1.4);
}

#redCorner {
  background-color: #cd252580;
  border-radius: 10px;
}

.the-end {
  height: 80px;
  margin-top: 20px;
}

